--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -179,7 +179,7 @@
                         We suggest that you do this in your ready share folder.
                         </br>
                         </br>
-                        Right Click to open the context menu -> Hover over “New” -> Press on “Folder”.
+                        Right Click to open the context menu -> Hover over "New" -> Press on "Folder".
                       </p>
                     </div>
                     <div class="fr">
@@ -192,7 +192,7 @@
                   <div class="para">
                     <div class="fl">
                       <p>
-                        Rename the folder to <textB> “<i>firstwebsite</i>”.</textB>
+                        Rename the folder to <textB> "<i>firstwebsite</i>".</textB>
                         </br>
                         </br>
                         This will be where you place all of your files for your website.
@@ -220,7 +220,7 @@
                   <div class="para">
                     <div class="fl">
                       <p>
-                        Inside your “<i>firstwebsite</i>” folder, right click and create a new text file.
+                        Inside your "<i>firstwebsite</i>" folder, right click and create a new text file.
                       </p>
                     </div>
                     <div class="fr">
@@ -233,7 +233,7 @@
                   <div class="para">
                     <div class="fl">
                       <p>
-                        Rename the file to say <textB> “<i>index.html</i>”.</textB>
+                        Rename the file to say <textB> "<i>index.html</i>".</textB>
                       </p>
                     </div>
                     <div class="fr">
@@ -259,7 +259,7 @@
                       <p>
                         Right click on your index file and select
                         <br>
-                        “Open with -> Choose another app”.
+                        "Open with -> Choose another app".
                       </p>
                     </div>
                     <div class="fr">
@@ -272,7 +272,7 @@
                   <div class="para">
                     <div class="fl">
                       <p>
-                        Find <textR>“Sublime”</textR> and double click it.
+                        Find <textR>"Sublime"</textR> and double click it.
                         </br>
                         </br>
                         <img class="questionmark" src="../questionmark.jpg"></img>
@@ -328,8 +328,8 @@
                   Click on the "<code class="prettifyResult">Result</code>" tab to see what it should look like. <br>
                   <code class="prettifyPurple">&lt;!DOCTYPE html></code> specifies you are using HTML5 (the latest version of HTML). <br>
                   <code class="prettifyHTML">&lt;html>&lt;/html></code> code between here is HTML code (as opposed to CSS, Javascript, etc) <br>
-                  <code class="prettifyHTML">&lt;head>&lt;/head></code> code between these tags are your “meta” information <br>
-                  <code class="prettifyHTML">&lt;meta charset=”utf-8”></code> allows special characters not found on every keyboard. <br>
+                  <code class="prettifyHTML">&lt;head>&lt;/head></code> code between these tags are your "meta" information <br>
+                  <code class="prettifyHTML">&lt;meta charset="utf-8"></code> allows special characters not found on every keyboard. <br>
                   <code class="prettifyHTML">&lt;body>&lt;/body></code> where your primary code goes. <br>
                   When you were doing CodeCombat, you were always in the <code class="prettifyHTML">&lt;body></code> tag.
                 </p>
@@ -338,7 +338,7 @@
                   <h2><code class="prettifyHTML">&lt;title&gt;</code></h2>
                 </a>
                 <p>
-                  If you notice on your new page, it says “index.html”.
+                  If you notice on your new page, it says "index.html".
                   That is rather ugly and unprofessional, thankfully HTML has a quick fix for that.
                 </p>
                 <nav>
@@ -374,8 +374,8 @@
                 </div>
                 <p>
                   <code class="prettifyHTML">&lt;title>&lt;/title></code> is an element that defines what you see on the
-                  browser tab. Notice (on the results tab), that it now says “<codeB>My Website!</codeB>” instead of
-                  “index.html”
+                  browser tab. Notice (on the results tab), that it now says "<codeB>My Website!</codeB>" instead of
+                  "index.html"
                 </p>
               </section>
 
@@ -452,7 +452,7 @@
                 </a>
                 <p>
                   Paragraph tags are the most common tag that you will use,
-                  as they are a good standard size to write “paragraphs” of information.
+                  as they are a good standard size to write "paragraphs" of information.
                 </p>
                 <h3 class="paraTitle">Paragraph Element <code class="prettifyHTML">&lt;p&gt;</code></h3>
                 <nav>
@@ -632,11 +632,11 @@
                   </div>
                 </div>
                 <p>
-                  <code class="prettifyHTML"> &lt;ul>&lt;/ul></code> list items between these tags will be “unordered”, and they will begin with a bullet
+                  <code class="prettifyHTML"> &lt;ul>&lt;/ul></code> list items between these tags will be "unordered", and they will begin with a bullet
                   point.
                 </p>
                 <p>
-                  <code class="prettifyHTML">&lt;ol>&lt;/ol></code> list items between these tags will be “ordered”, and they will be numbered starting
+                  <code class="prettifyHTML">&lt;ol>&lt;/ol></code> list items between these tags will be "ordered", and they will be numbered starting
                   at 1.
                 </p>
                 <p>
@@ -727,7 +727,7 @@
                 </div>
                 <p>
                   <code class="prettifyHTML">&lt;table>&lt;/table></code> creates your table the
-                  <code class="prettifyCSS">style=”width=100%”</code> is CSS code that you
+                  <code class="prettifyCSS">style="width=100%"</code> is CSS code that you
                   don’t need to worry about until later in this
                   lesson.
                 </p>
@@ -782,7 +782,7 @@
                     <div class="fl">
                       <p>
                         Create a new folder in your website folder
-                        called “images” and place your picture in
+                        called "images" and place your picture in
                         there.
                       </p>
                       <p>
@@ -832,8 +832,8 @@
                   <br>
                   <p>
                     <code class="prettifyHTML"> &lt;image></code> tag allows you to import images in your website. Notice that the src is equal to
-                    “images/walle.jpg”? This is because that the image is stored in a sub-folder of what is called
-                    the “root” folder.
+                    "images/walle.jpg"? This is because that the image is stored in a sub-folder of what is called
+                    the "root" folder.
                   </p>
               </section>
               <section id="section_MULTIPAGES">
@@ -900,7 +900,7 @@
                       <p>
                         Go to your project folder, right click and
                         create a new text file and call it
-                        “newpage.html”.
+                        "newpage.html".
                       </p>
                     </div>
                     <div class="fr">
@@ -920,7 +920,7 @@
                   <p>
                     Edit the index.html page to include an anchor
                     (&lt;a>&lt;/a>) tag with an href to
-                    “newpage.html”
+                    "newpage.html"
                   </p>
                   <nav>
                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -1041,7 +1041,7 @@
                     <div class="fl">
                       <p>
                         In your projects folder, right click and create a
-                        new folder called “stylesheet”.
+                        new folder called "stylesheet".
                       </p>
                     </div>
                     <div class="fr">
@@ -1054,8 +1054,8 @@
                   <div class="para">
                     <div class="fl">
                       <p>
-                        In the folder “stylesheet”, create a new file
-                        called “stylesheet.css”.
+                        In the folder "stylesheet", create a new file
+                        called "stylesheet.css".
                       </p>
                       <p>
                         This will hold all of your style information
@@ -1112,7 +1112,7 @@ p {
                     <p>
                       Body: Is where most of your code is placed in
                       your HTML file (remember the
-                      &lt;body>&lt;/body> tags?) So altering the “body”
+                      &lt;body>&lt;/body> tags?) So altering the "body"
                       element is altering the entirety of your page.
                     </p>
                     <p>
@@ -1120,7 +1120,7 @@ p {
                       HTML Code
                     </p>
                     <p>
-                      All of these are known as “rules” for your
+                      All of these are known as "rules" for your
                       style. The <strong> selector</strong>​ is the element you’re
                       changing, and the <strong> declaration​</strong> is what is
                       being changed from what you selected.
@@ -1193,9 +1193,9 @@ p {
             <h2>Id <code class="prettifyCSS">#</code></h2>
           </a>
           <p>
-            Beyond selecting rules for elements, you can also select specific elements by either “id” or
-            “class”. They are both very similar, the difference is that “id” is meant for one element while
-            “class” is for multiple.
+            Beyond selecting rules for elements, you can also select specific elements by either "id" or
+            "class". They are both very similar, the difference is that "id" is meant for one element while
+            "class" is for multiple.
           </p>
           <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -1243,12 +1243,12 @@ p {
           <p>
             <i>
               Notice how they’re both <code class="prettifyHTML">&lt;p>&lt;/p></code> tags? But
-              only one is changed, that’s why we have “id”
+              only one is changed, that’s why we have "id"
               properties?
             </i>
           </p>
           <p>
-            “id” elements are accessed by “#” in front of them in the CSS file.
+            "id" elements are accessed by "#" in front of them in the CSS file.
           </p>
         </div>
 
@@ -1256,7 +1256,7 @@ p {
           <h2>Class <code class="prettifyCSS">.</code></h2>
         </a>
         <p>
-          You’ve done “id” for one element, now to see class affect multiple elements.
+          You’ve done "id" for one element, now to see class affect multiple elements.
         </p>
         <nav>
           <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -1308,7 +1308,7 @@ p {
             </i>
           </p>
           <p>
-            To change the rule of a “class”, put a period (.) before the class name in your CSS rule.
+            To change the rule of a "class", put a period (.) before the class name in your CSS rule.
           </p>
         </div>
         <br>
