--- a/CCProjects/WD2/index.html
+++ b/CCProjects/WD2/index.html
@@ -87,7 +87,7 @@
                 </ol>
                 <li>Event handlers with buttons</li>
                 <ol>
-                  <li>Saying “Hello, World” with a button click</li>
+                  <li>Saying "Hello, World" with a button click</li>
                 </ol>
                 <li>Altering elements in your page</li>
                 <ol>
@@ -121,15 +121,15 @@
                 <ol>
                   <li>
                     Create a new project folder and call it
-                    something like “javascriptwebsite”
+                    something like "javascriptwebsite"
                   </li>
-                  <li>Create a subfolder called “stylesheet”.</li>
+                  <li>Create a subfolder called "stylesheet".</li>
                   <li>
-                    Create a file called “stylesheet.css” in that
+                    Create a file called "stylesheet.css" in that
                     subfolder.
                   </li>
                   <li>
-                    Create the “index.html” file in the main folder
+                    Create the "index.html" file in the main folder
                     (or root folder), and add the following code.
                   </li>
                 </ol>
@@ -242,7 +242,7 @@
                 </p>
                 <p>
                   That variable’s value is determined in the <code class="prettifyHTML">&lt;button>&lt;/button></code> tags "<code class="prettifyCSS">onclick</code>" property. You
-                  should see that it is equal to a function called “<code class="prettifyCSS">sayHello()</code>” (which was defined in the
+                  should see that it is equal to a function called "<code class="prettifyCSS">sayHello()</code>" (which was defined in the
                   <code class="prettifyJS">&lt;script>&lt;/script></code> tags above.)
                 </p>
                 <br>
@@ -371,7 +371,7 @@
                     </div>
                   </div>
                 </div>
-                <p>Similar to how we change “<code class="prettifyHTML">innerHTML</code>”, but in this case we change the “<code class="prettifyCSS">src</code>” property.</p>
+                <p>Similar to how we change "<code class="prettifyHTML">innerHTML</code>", but in this case we change the "<code class="prettifyCSS">src</code>" property.</p>
               </section>
 
               <section id="section_INPUT">
@@ -603,7 +603,7 @@
                   differences.
                 </p>
                 <p>
-                  “<code class="prettifyJS">input</code>” is now “<code class="prettifyJS">text</code>” because we’re using words. We’re also placing an id in a <code class="prettifyHTML">&lt;b>&lt;/b></code> tag so
+                  "<code class="prettifyJS">input</code>" is now "<code class="prettifyJS">text</code>" because we’re using words. We’re also placing an id in a <code class="prettifyHTML">&lt;b>&lt;/b></code> tag so
                   that we can change it’s HTML later.
                 </p>
               </section>
@@ -725,7 +725,7 @@
                   <li>Examples that you can do</li>
                   <ol>
                     <li>A questionnaire field asking for name, age, and other things</li>
-                    <li>Entering words in the field and pressing “Submit” to add those words somewhere on your page</li>
+                    <li>Entering words in the field and pressing "Submit" to add those words somewhere on your page</li>
                   </ol>
                 </ol>
                 <li>Have at least one element that does something when hovered over and when not hovered</li>
