Found and revoled quote issues in WD3 and WD4 (issue #2)

--- a/CCProjects/WD3/index.html
+++ b/CCProjects/WD3/index.html
@@ -298,7 +298,7 @@
                     Here you can also see that you can echo tags like <code class="prettifyHTML">&lt;h1>&lt;/h1></code>.
                   </p>
                   <p>
-                    In order to add variables to your “echo”, you separate them with a period (.)
+                    In order to add variables to your "echo", you separate them with a period (.)
                   </p>
 
                   <a id="0SERVERVARIABLES"><h2><code class="prettifyPHP">Server variables</code></h2></a>
