--- a/CCProjects/WD4/index.html
+++ b/CCProjects/WD4/index.html
@@ -239,7 +239,7 @@
                     your browser. You can't just double click the file (if you do, you'll just see the PHP code).
                   </p>
                 </section>
-                  
+
 
                 <section id="section_CBP">
                   <a id="_CBP"><h1><codeG>Create Base Pages</codeG></h1></a>
@@ -253,7 +253,7 @@
                     Modify your index page to look like this.
                     Remember that index​ is the first page anyone
                     would go to if they typed in your website
-                    address, so this is considered your “home”
+                    address, so this is considered your "home"
                     page.
                   </p>
                   <nav>
