Finished copying content over wd4 fixed some error in others

--- a/CCProjects/WD3/index.html
+++ b/CCProjects/WD3/index.html
@@ -4,7 +4,7 @@
 <head id="php">
   <title>PHP Basics</title>
   <script>
-    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+    // document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
   </script>
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js"></script>
@@ -1276,7 +1276,7 @@
                 <section id="section_FINALPRODUCT">
                   <a id="_FINALPRODUCT"><h1><codeG>Final Product</codeG></h1></a>
                   <div class="paraCenter">
-                    <h1>You’ve made it!</h1>
+                    <h1>You've made it!</h1>
                     <p>
                       This was definitely a trial to get through, but you did it! You are soon reaching the ability to
                       allow users to log in to your website. Hopefully, you’re not scared away by PHP. Because you’ll
