Cleaned up to page 15

--- a/CCProjects/WD2/index.html
+++ b/CCProjects/WD2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head id="js">
   <title>Implementing Javascript</title>
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js"></script>
