--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -678,7 +678,7 @@
         &lt;th>Release&lt;/th>
       &lt;/tr>
       &lt;tr>
-        &lt;td>Fortnight&lt;/td>
+        &lt;td>Fortnite&lt;/td>
         &lt;td>PC&lt;/td>
         &lt;td>2017&lt;/td>
       &lt;/tr>
