--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
+                <a class="class-page-link button" href="https://github.com/mm909/SpeedCodeHTMLCalc" rel="noreferrer noopener">GitHub</a>
+                <a id="wd3" href="https://mm909.github.io/SpeedCodeHTMLCalc"><h2>SpeedCode: HTML Calc - <code class="prettifyJS"> From Scratch </code></h2></a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                  <a class="class-page-link button" href="https://github.com/mm909/Teaching/tree/master/CCProjects/HTMLCalc" rel="noreferrer noopener">GitHub</a>
+                  <a id="wd3" href="CCProjects/HTMLCalc/index.html"><h2>HTML Calc - <code class="prettifyJS"> From Scratch </code></h2></a>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
 
                 <a class="class-page-link button" href="https://github.com/mm909/Teaching/tree/master/projects" rel="noreferrer noopener">GitHub</a>
                 <a id="p5" href="projects/introp5/project1/index.html"><h2>Intro p5 - <code class="prettifyJS"> From Scratch </code> </h2></a>
