--- a/CCProjects/HTMLCalc/index.html
+++ b/CCProjects/HTMLCalc/index.html
@@ -113,10 +113,10 @@
                 </a>
 
                 <p>
-                  By now you should be familiar with most of the HTML setup steps. The visual aids are gone, the training wheels are off! If you need help <code class="prettifySQL">you can always ask an instructor for help! ۜ\(סּںסּَ` )/ۜ</code>
+                  By now you should be familiar with most of the HTML setup steps. The visual aids are gone, the training wheels are off! If you need <code class="prettifySQL">you can always ask an instructor for help! ۜ\(סּںסּَ` )/ۜ</code>
                 </p>
                 <p>
-                  To get started <strong> create a new folder </strong> to store your files (<strong> Right click => New => Folder </strong>). You may name it whatever you'd like but make it something meaningful to you!
+                  To get started, <strong> create a new folder </strong> to store your files (<strong> Right click => New => Folder </strong>). You may name it whatever you'd like, but make it something meaningful to you!
                 </p>
                 <p>
                   Inside of the new folder <strong> create a new file </strong> and name it <code class="prettifyHTML">index.html</code> (<strong> Right click => New => Text document </strong>).
@@ -126,6 +126,9 @@
                   <h2><code class="prettifyHTML">Code Setup</code></h2>
                 </a>
                 <p>Add the following code to <code class="prettifyHTML">index.html</code></p>
+                <code class="prettifySQL">HINT! - type 'html' (without the quotes) then hit tab!</code>
+                <br>
+                <br>
                 <div class='CodeBoxL'>
                   <pre class="prettyprint linenums lang-html CodeBoxBuffer">
 &lt;!DOCTYPE html&gt;
@@ -352,7 +355,9 @@
 &lt;/html&gt;</pre>
                 </div>
                 <p><code class="prettifyCOM">Add comments reminding you what button belong to each row.</code> </p>
-
+                <a id="0TABLEBUTTONS">
+                  <h2><code class="prettifyHTML">Buttons</code></h2>
+                </a>
               </section>
 
             </article>
