--- a/CCProjects/HTMLCalc/index.html
+++ b/CCProjects/HTMLCalc/index.html
@@ -351,8 +351,195 @@
   &lt;/body&gt;
 &lt;/html&gt;</pre>
                 </div>
-                <p><code class="prettifyCOM">Add comments reminding you what button belong to each row.</code> </p>
+                  <p><code class="prettifyCOM">Add comments reminding you what button belong in each row.</code> </p>
+                  <a id="0BUTTONS">
+                    <h2><code class="prettifyHTML">Buttons</code></h2>
+                  </a>
+                  <p>Time to <strong>add some buttons</strong> to our calculator!</p>
+                  <div class="paraSection">
+                  <p>
+                    We are going to use <code class="prettifyHTML">input</code> to make them like so: <br>
+                    <code class="prettifyHTML">&lt;input class="button" type="button" onclick="" id="" value=""></code>
+                  </p>
+                  <p>
+                    <code class="prettifyHTML">type="button"</code> makes our 'input' a button. <input class="button" type="button" onclick="" id="" value="Button!"> <br>
+                    <code class="prettifyHTML">class="button"</code> is so that we can style our button later.<br>
+                    <code class="prettifyHTML">id="" and value=""</code> are how we can identify our button.<br>
+                  </p>
+                  <div class="paraCenter">
+                    <p>
+                      What do you think <code class="prettifyJS">onclick=""</code> does?<br>
+                      <code class="prettifySQL">Write you answer as a comment or ask an instructor! ʕノ◔ϖ◔ʔノ</code>
+                    </p>
+                  </div>
+                </div>
 
+                <p>Add a button to each <code class="prettifyHTML">td</code></p>
+                <div class='CodeBoxL'>
+                  <pre class="prettyprint linenums lang-html CodeBoxBuffer">
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+  &lt;head&gt;
+    &lt;title&gt;HTML Calc!&lt;/title&gt;
+  &lt;/head&gt;
+
+  &lt;style>
+  &lt;/style>
+
+  &lt;script>
+  &lt;/script>
+
+  &lt;body&gt;
+    &lt;div class="main">
+      &lt;form name="form">
+        &lt;input class="textview" name="textview" type="text">
+      &lt;/form>
+      &lt;!-- Add the code below! -->
+      &lt;table>
+        &lt;tr>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+        &lt;/tr>
+        &lt;tr>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+        &lt;/tr>
+        &lt;tr>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+        &lt;/tr>
+        &lt;tr>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+        &lt;/tr>
+        &lt;tr>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+        &lt;/tr>
+      &lt;/table>
+      &lt;!-- Add the code above! -->
+    &lt;/div>
+  &lt;/body&gt;
+&lt;/html&gt;</pre>
+                </div>
+                <div class="paraCenter">
+                  <p> <strong>&#x1F389; <code class="prettifySQL">WE HAVE BUTTONS!</code> &#x1F389;</strong> </p>
+                </div>
+
+                <br>
+
+                <div class="paraSection">
+                  <div class="main">
+                    <form name="form">
+                      <input class="textview" name="textview" type="text">
+                    </form>
+                    <table>
+                      <tr>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                      </tr>
+                      <tr>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                      </tr>
+                      <tr>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                      </tr>
+                      <tr>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                      </tr>
+                      <tr>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                        <td><input class="button1" type="button" id="" onclick="" value=""></td>
+                      </tr>
+                    </table>
+                  </div>
+                </div>
+                <br>
+                <p>Lets add some lables to those buttons!</p>
+                <div class="paraSection">
+                  <p>
+                    To add text to our buttons we need to change the <code class="prettifyJS">value=""</code> attribute. <br>
+                    For the "1" button we change value to <code class="prettifyJS">value="1"</code> <br>
+                    Like so: <code class="prettifyHTML">&lt;td&lt;input class="button1" type="button" id="" onclick="" value="1">&lt;/td></code> <br>
+                    <!-- <strong>Do this for all the <i>NUMBERS!</i> </strong> -->
+                  </p>
+                </div>
+                <br>
+                <p>This is what we end up with <code class="prettifySQL">༼ つ ◕_◕ ༽つ</code> <a target="_blank" href="https://mm909.github.io/SpeedCodeHTMLCalc/"><code class="prettifySQL"><u>Reference</u></code></a> </p>
+                <div class='CodeBoxL'>
+                  <pre class="prettyprint linenums lang-html CodeBoxBuffer">
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+  &lt;head&gt;
+    &lt;title&gt;HTML Calc!&lt;/title&gt;
+  &lt;/head&gt;
+
+  &lt;style>
+  &lt;/style>
+
+  &lt;script>
+  &lt;/script>
+
+  &lt;body&gt;
+    &lt;div class="main">
+      &lt;form name="form">
+        &lt;input class="textview" name="textview" type="text">
+      &lt;/form>
+      &lt;!-- Add the code below! -->
+      &lt;table>
+        &lt;tr>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="C">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="/">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="*">&lt;/td>
+        &lt;/tr>
+        &lt;tr>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="1">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="2">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="3">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="+">&lt;/td>
+        &lt;/tr>
+        &lt;tr>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="4">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="5">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="6">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="-">&lt;/td>
+        &lt;/tr>
+        &lt;tr>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="7">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="8">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="9">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="=">&lt;/td>
+        &lt;/tr>
+        &lt;tr>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value="0">&lt;/td>
+          &lt;td>&lt;input class="button" type="button" id="" onclick="" value=".">&lt;/td>
+        &lt;/tr>
+      &lt;/table>
+      &lt;!-- Add the code above! -->
+    &lt;/div>
+  &lt;/body&gt;
+&lt;/html&gt;</pre>
+                </div>
               </section>
 
             </article>
